2009-11-30	Hans Rakers <hans at react.nl>

		* Added a whole bunch of standard functions to
		  opt_result_is_numeric()
		* init allocated memblocks with memset instead of a for loop
		  in reassign_registers()
		* Fix in build_cfg for PHP 5.3 UCLASS znodes. These are
		  handled differently in 5.3 due to namespaces.
		* Some tweaks and additions to ea_dasm.c

2009-11-25	Hans Rakers <hans at react.nl>

		* Optimizer and general PHP 5.3 fixes
		* Some cleanups

2009-11-11	Bart Vanbrabant <bart at vanbrabant.eu>

		* Add the optimizer back

2009-11-11	Hans Rakers <hans at react.nl>

		* PHP 5.3 ZEND_JMP_SET support. Fixes ticket #371
		* open_basedir bypass fixed. Fixes ticket #104
		* Fix for ticket #194
		* Stripped old opcodes from opcode.c and added new ones

2009-07-14	Bart Vanbrabant <bart at vanbrabant.eu>
	
		* Fix two PHP 5.3 bugs
		* Remove the optimizer
		* Remove the user cache functions

2009-05-06	Bart Vanbrabant <bart at vanbrabant.eu>

		* Remove code that is only needed for php < 5
		* Rebase to code to minimal PHP 5.1
		* Update support for PHP 5.3
		* Remove have_sched_yield check in config.m4. This is not used
		  anywhere and and causes some compilation errors.
		* Apply patch from ticket [324]

2008-06-20  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * First stab at php 5.3 support. Only fixes the script cache.
          phpMyAdmin seems to work with these changes.
        * Fix user cache stuff

2008-06-19  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Remove support for all php versions older than php 5.1

2008-06-18  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
	
        * Add patch from ticket 232: removes an unlock that isn't
		  needed there.

2008-02-12  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
		
		* Add new opcodes introduced in PHP 5.3

2007-08-20  Hans Rakers <hans at react.nl>

        * Changed crash handler error message format to Apache-style error log