@@ -18,12 +18,13 @@
    $ Id: $
 
 /** config **/
+$auth = true;		// Set to false to disable authentication
 $user = "admin";
 $pw = "eAccelerator";
 /** /config **/
 
 /* {{{ auth */
-if (!isset($_SERVER['PHP_AUTH_USER']) || !isset($_SERVER['PHP_AUTH_USER']) ||
+if ($auth && !isset($_SERVER['PHP_AUTH_USER']) || !isset($_SERVER['PHP_AUTH_USER']) ||
         $_SERVER['PHP_AUTH_USER'] != $user || $_SERVER['PHP_AUTH_PW'] != $pw) {
     header('WWW-Authenticate: Basic realm="eAccelerator control panel"');
     header('HTTP/1.0 401 Unauthorized');
@@ -31,8 +32,17 @@ if (!isset($_SERVER['PHP_AUTH_USER']) || !isset($_SERVER['PHP_AUTH_USER']) ||
 } 
 /* }}} */
 
-?>
+/* section = script cache */
+$sec = 1;
 
+if (!function_exists('eaccelerator_info')) {
+    die('eAccelerator isn\'t installed or isn\'t compiled with info support!');
+}
+
+// Global info array
+$info = eaccelerator_info();
+
+?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
@@ -42,11 +52,28 @@ if (!isset($_SERVER['PHP_AUTH_USER']) || !isset($_SERVER['PHP_AUTH_USER']) ||
     <meta http-equiv="Content-Language" content="en" />
 
     <style type="text/css" media="all">
-        body {background-color: #ffffff; color: #000000;}
-        body, td, th, h1, h2 {font-family: sans-serif;}
+        body {background-color: #ffffff; color: #000000;margin: 0px;}
+        body, td {font-family: Tahoma, sans-serif;font-size: 12pt;}
+
+        a:link {color: #ff0000; text-decoration: none;}
+        a:visited {color: #ff0000; text-decoration: none;}
+        a:active {color: #aa0000; text-decoration: none;}
+        a:hover {color: #aa0000; text-decoration: none;}
+        
+        .head1 {background-color: #A9CFDD; width: 100%; font-size: 32px; color: #ffffff;padding-top: 20px;font-family: Tahoma, sans-serif;}
+        .head1_item {padding-left: 15px;}
+        .head2 {background-color: #62ADC2; width: 100%; font-size: 18px; color: #ffffff;text-align: right; font-family: Tahoma, sans-serif;border-top: #ffffff 2px solid;}
+        .head2 a:link {color: #ffffff;}
+        .head2 a:visited {color: #ffffff;}
+        .head2 a:active {color: #ffffff;}
+        .head2 a:hover {color: #000000;}
+
+        .menuitem {padding-left: 15px;padding-right: 15px;}
+        .menuitem_sel {padding-left: 15px;padding-right: 15px;background-color: #ffffff; color: #000000;}
+        .menuitem_hov {padding-left: 15px;padding-right: 15px;cursor:pointer;color: #000000;}
+
         pre {margin: 0px; font-family: monospace;}
-        a:link {color: #000099; text-decoration: none; background-color: #ffffff;}
-        a:hover {text-decoration: underline;}
+
         table {border-collapse: collapse; width: 800px;}
         .center {text-align: center;}
         .center table { margin-left: auto; margin-right: auto; text-align: left;}
@@ -56,8 +83,8 @@ if (!isset($_SERVER['PHP_AUTH_USER']) || !isset($_SERVER['PHP_AUTH_USER']) ||
         h1 {font-size: 150%;}
         h2 {font-size: 125%;}
         .p {text-align: left;}
-        .e {background-color: #ccccff; font-weight: bold; color: #000000;}
-        .h,th {background-color: #9999cc; font-weight: bold; color: #000000;}
+        .e {background-color: #A9CFDD; font-weight: bold; color: #000000;}
+        .h,th {background-color: #62ADC2; font-weight: bold; color: #000000;}
         .v,td {background-color: #cccccc; color: #000000;}
         .vr{background-color: #cccccc; text-align: right; color: #000000;}
         img {float: right; border: 0px;}
@@ -66,10 +93,41 @@ if (!isset($_SERVER['PHP_AUTH_USER']) || !isset($_SERVER['PHP_AUTH_USER']) ||
         h1 {width: 800px;  border: 1px solid #000000; margin-left: auto; margin-right: auto; background-color: #9999cc;}
         .l {border: 1px solid #000000; text-align: left; width: 800px; margin: auto; font-size: 65%;}
         .l h2 {font-size: 200%; text-align: center; }
+
+        .footer {width: 100%;text-align: center;font-size: 9pt;color: #ababab;}
+        .footer a:link {color: #ababab;}
+        .footer a:visited {color: #ababab;}
+        .footer a:active {color: #000000;}
+        .footer a:hover {color: #000000;}
+        
+        small {font-size: 10pt;}
+        .s {color: #676767;}
+
     </style>
+
+    <script type="text/javascript">
+      function menusel(i) {
+        if (i.className == "menuitem_hov") i.className = "menuitem";
+        else if (i.className == "menuitem") i.className = "menuitem_hov";
+      }
+      function gosec(i) {
+        document.location = "control.php?sec="+i;
+      }
+    </script>
+
 </head>
-<body class="center">
-<h1>eAccelerator disassembler</h1>
+<body>
+	<div class="head1"><span class="head1_item">eAccelerator control panel</span></div>
+	<div class="head2">
+	<?php
+	$items = array(0 => 'Status', 1 => 'Script Cache');
+
+	foreach ($items as $i => $item) {
+	    echo '<span class="menuitem'.(($sec == $i)?'_sel':'').'" onmouseover="menusel(this)" onmouseout="menusel(this)" onclick="gosec('.$i.')">'.(($sec != $i)?'<a href="control.php?sec='.$i.'">'.$item.'</a>':$item).'</span>';
+	}  
+	?>
+	</div>
+	<div class="center">
 <?php
     if (!isset($_GET['file']) || !is_file($_GET['file'])) {
         die('File argument not given!');
@@ -232,6 +290,22 @@ if (!isset($_SERVER['PHP_AUTH_USER']) || !isset($_SERVER['PHP_AUTH_USER']) ||
 	}
 /* }}} */
 ?>
+</div>
+
+<div class="footer">
+<?php
+if (is_array($info)) {
+?>
+<br/><br/>
+    <hr style="width:500px; color: #cdcdcd" noshade="noshade" size="1" />
+    <strong>Created by the eAccelerator team &ndash; <a href="http://eaccelerator.net">http://eaccelerator.net</a></strong><br /><br />
+    eAccelerator <?php echo $info['version']; ?> [shm:<?php echo $info['shm_type']?> sem:<?php echo $info['sem_type']; ?>]<br />
+    PHP <?php echo phpversion();?> [ZE <?php echo zend_version(); ?>]<br />
+    Using <?php echo php_sapi_name();?> on <?php echo php_uname(); ?><br />
+<?php
+}
+?>
+</div>
 </body>
 </html>
 
